# tchalanet

./: .codexignore  .gitignore  .lintstagedrc  .mcp.json  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc.cjs  .stylelintrc.json  AGENTS.md  CLAUDE.md  DOCUMENTATION.md  FIX-OPENID-CONFIGURATION-URL.md  FIXES_APPLIED.md  MEILISEARCH-REMOVAL-SUMMARY.md  Makefile  QUICK-START.md  README.md  RECAP-COMPLETE-2025-11-16.md  TCHALANET_ANALYSIS_SUMMARY.md  TCHALANET_V1_FLOWS_ANALYSIS.md  VERSIONS.md  eslint.config.mjs  nx-aliases.sh  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vercel.json
.agents/: README.md  (+9 more)
tchalanet-server/testing/e2e/: .env.example  AGENTS.md  README.md  conftest.py  pyproject.toml  pytest.ini
tchalanet-server/testing/e2e/docs/: e2e-dashboards-synthesis.md
tchalanet-server/testing/e2e/fixtures/: __init__.py  access-control.v1.json  operational-context.v1.json  pos_context.py  seller_pos.py
tchalanet-server/testing/e2e/flows/: __init__.py  cashier.py  home.py  onboarding.py  outlet.py  profile.py  seller.py  terminal.py
tchalanet-server/testing/e2e/prereqs/: __init__.py  app_user.py  draws.py  session.py
tchalanet-server/testing/e2e/tch_e2e/: __init__.py  api_response.py  assertions.py  auth.py  client.py  concurrency.py  config.py  data_factory.py  scenario_world.py  ticket_matrix.py
tchalanet-server/tests/e2e/: README.md  conftest.py  pyproject.toml
tchalanet-server/tests/e2e/flows/: cashier.py  home.py  profile.py
tchalanet-server/tests/e2e/lib/: api.py  context.py  ids.py
(+14981 files in other folders)
