[project]
name = "tchalanet-e2e"
version = "0.2.0"
description = "End-to-end tests for Tchalanet — business runtime V1."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pytest>=8.0",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -p no:cacheprovider"
markers = [
    "L0: boot smoke — every run",
    "L1: daily smoke — main happy paths",
    "L2: business critical — nightly/pre-merge",
    "L3: concurrency correctness — on demand",
    "cashier_pos: cashier POS flow tests",
    "onboarding: tenant/user/outlet/terminal onboarding tests",
    "slow: tests that hit external providers or generate large artifacts",
]

[tool.uv]
package = false
