[project]
name = "tchalanet-e2e"
version = "0.1.0"
description = "End-to-end tests for Tchalanet — cashier journey & tenant onboarding."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pytest>=8.0",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -p no:cacheprovider"
markers = [
    "happy_path: end-to-end happy path scenarios",
    "tenant_onboarding: tenant provisioning scenarios",
    "profile: current-user profile and surface home scenarios",
    "slow: tests that hit the document service or external providers",
]

[tool.uv]
package = false
